# korbpuls

./: .dockerignore  .gitignore  DISTRIBUTION.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: docker-publish.yml
scripts/: build-docker.sh
src/korbpuls/: __init__.py  auth.py  cache.py  korb_client.py  main.py  presenters.py  slugify.py
src/korbpuls/ai/: __init__.py  agents.py  config.py  tools.py
src/korbpuls/ai/skills/: LEAGUE_PREDICTION.md  MATCHUP_PREVIEW.md  STANDINGS_NARRATIVE.md  TEAM_ANALYSIS.md
src/korbpuls/static/: app.css
src/korbpuls/templates/: base.html  ergebnisse.html  error.html  index.html  loading.html  matchup.html  prediction.html  schedule.html  standings.html  team.html
